# SmartOfficeSrv

./: .gitignore  CMakeLists.txt  README.md  README.txt  config.ini  main.cpp  smartoffice-srv.h
cmake/modules/: FindMySQL++.cmake
include/: config
src/: client.cpp  client.h  config.cpp  config.h  gateway.cpp  gateway.h  logger.cpp  logger.h  mysql_handler.cpp  mysql_handler.h  response_handler.cpp  response_handler.h  server.cpp  server.h  session.cpp  session.h
